[project]
name = "pss-cli"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "typer>=0.12.1",
    "rich>=13.7.1",
    "shellingham>=1.5.4",
    "pluggy>=1.2.0",
    "sqlmodel>=0.0.16",
    "tabulate>=0.9.0",
    "inquirerpy>=0.3.4",
    "questionary>=1.10.0",
    "pyfzf>=0.3.1",
    "pssepath>=0.2.3",
]
readme = "README.md"
requires-python = ">= 3.7"

[project.scripts]
"pss-cli" = "pss_cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pss_cli"]
